# inka-flashcards

./: .gitignore  .pre-commit-config.yaml  README.md  launch.sh
inka-api/: README.md  pyproject.toml
inka-api/inka_api/: algorithms.py  app.py  functions.py
inka-api/inka_api/api/: algorithms.py  cards.py  decks.py  functions.py  schemas.py  study.py  utils.py
inka-api/inka_api/others/: functions.py  irregular_verbs_template.py  regular_verbs_template.py  simple_qa_and_reverse.py
inka-api/inka_api/tmp/: 11.json  A.json  PT.json  Portuguese 🇵🇹.json
inka-frontend/: README.md  pyproject.toml
inka-frontend/inka_frontend/: app.py  constants.py
inka-frontend/inka_frontend/api/: cards.py  decks.py  private.py  public.py  schemas.py  study.py  utils.py
inka-frontend/inka_frontend/others/: irregular_verbs_template.py  simple_qa_and_reverse.py
inka-frontend/inka_frontend/static/css/: deck-details.css  login.css  modal.css  private-base.css  public-base.css  study.css
inka-frontend/inka_frontend/static/js/ext/: disable-element.js  path-deps.js  preload.js  restored.js  sse.js  ws.js
inka-frontend/inka_frontend/static/js/legacy/: base.js  boxes-ajax.js  boxes-rendering.js  boxes-ui.js  edit.js  home.js  study-ajax.js  study-ui.js
inka-frontend/inka_frontend/templates/components/: card.html  deck.html  loading.html  new_deck.html  schema.html
inka-frontend/inka_frontend/templates/components/edit/: algo-ebisu.html  algo-random.html  html-widget.html  text-widget.html
inka-frontend/inka_frontend/templates/components/show/: html-widget.html  text-widget.html
inka-frontend/inka_frontend/templates/private/: base.html  card.html  cards.html  deck.html  home.html  import.html  logout.html  profile.html  schema-code.html  schema-readonly.html  schema.html  schemas.html  study.html
inka-frontend/inka_frontend/templates/public/: base.html  http_error.html  landing-page.html  login.html  signup.html
inka-frontend/inka_frontend/templates/responses/: cards.html  study.html
inka-frontend/inka_frontend/tmp/: 1.json  2.json
